--- a/app/views/settings/_api.html.erb
+++ b/app/views/settings/_api.html.erb
@@ -4,6 +4,9 @@
 <p><%= setting_check_box :rest_api_enabled %></p>
 
 <p><%= setting_check_box :jsonp_enabled %></p>
+
+<p><%= setting_text_field :api_limit, :size => 6 %></p>
+
 </div>
 
 <%= submit_tag l(:button_save) %>
