--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -779,12 +779,15 @@ textarea#custom_field_default_value {width: 95%; resize:vertical}
 input#content_comments {width: 99%}
 
 span.pagination {margin-left:3px; color:#888; display:block;}
-.pagination ul.pages {
+.pagination ul.pages, .next-prev-links {
   margin: 0 5px 0 0;
   padding: 0;
   display: inline;
 }
-.pagination ul.pages li {
+div.next-prev-links.contextual span {
+  margin-left: -5px;
+}
+.pagination ul.pages li, .next-prev-links span {
   display: inline-block;
   padding: 0;
   border: 1px solid #ddd;
@@ -795,14 +798,14 @@ span.pagination {margin-left:3px; color:#888; display:block;}
   text-align: center;
 }
 .pagination ul.pages li a,
-.pagination ul.pages li span {
+.pagination ul.pages li span, .next-prev-links span a {
   padding: 3px 8px;
 }
-.pagination ul.pages li:first-child {
+.pagination ul.pages li:first-child, .next-prev-links span:first-child {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
-.pagination ul.pages li:last-child {
+.pagination ul.pages li:last-child, .next-prev-links span:last-child {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
@@ -811,11 +814,13 @@ span.pagination {margin-left:3px; color:#888; display:block;}
   background-color: #628DB6;
   border-color: #628DB6;
 }
-.pagination ul.pages li.page:hover {
+.pagination ul.pages li.page:hover, .next-prev-links span:hover {
   background-color: #ddd;
 }
 .pagination ul.pages li.page a:hover,
-.pagination ul.pages li.page a:active {
+.pagination ul.pages li.page a:active,
+.next-prev-links span a:hover,
+.next-prev-links span a:active{
   color: #169;
   text-decoration: inherit;
 }
