--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1467,6 +1467,10 @@ td.gantt_selected_column .gantt_hdr,.gantt_selected_column_container {
   color: #fff;
   border: 1px solid #d22;
 }
+.badge-project-public {
+  color: #d22;
+  border: 1px solid #d22;
+}
 .badge-count {
   color: #fff;
   background:#9DB9D5;
