--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1468,8 +1468,8 @@ td.gantt_selected_column .gantt_hdr,.gantt_selected_column_container {
   border: 1px solid #d22;
 }
 .badge-project-public {
-  color: #d22;
-  border: 1px solid #d22;
+  color: #205D86;
+  border: 1px solid #205D86;
 }
 .badge-count {
   color: #fff;
