apply 0001b at https://www.redmine.org/issues/3143#note-35

--- a/app/views/issues/_action_menu_edit.html.erb
+++ b/app/views/issues/_action_menu_edit.html.erb
@@ -3,7 +3,7 @@
 
 <div style="clear: both;"></div>
 <% if @issue.editable? %>
-  <div id="update" style="display:none;">
+  <div id="update" class="hidden">
     <h3><%= l(:button_edit) %></h3>
     <%= render :partial => 'edit' %>
   </div>
