--- a/app/views/issues/_action_menu.html.erb
+++ b/app/views/issues/_action_menu.html.erb
@@ -1,4 +1,7 @@
 <div class="contextual">
+<%= link_to l(:button_add_notes), edit_issue_path(@issue),
+            :onclick => 'showAndScrollToAddNotes(); return false;',
+            :class => 'icon icon-add' if @issue.editable? %>
 <%= link_to l(:button_edit), edit_issue_path(@issue),
             :onclick => 'showAndScrollTo("update", "issue_notes"); return false;',
             :class => 'icon icon-edit', :accesskey => accesskey(:edit) if @issue.editable? %>
