#48 第12回パッチ会での会話を受けて https://scrapbox.io/redmine-patch/%E7%AC%AC12%E5%9B%9E-%E3%82%B3%E3%83%A1%E3%83%B3%E3%83%88%E3%81%AF%E7%B7%A8%E9%9B%86%E3%83%AA%E3%83%B3%E3%82%AF%E3%81%8B%E3%82%89%E3%81%A7%E3%81%AF%E3%81%AA%E3%81%8F%E3%80%81%E3%82%B3%E3%83%A1%E3%83%B3%E3%83%88%E8%BF%BD%E5%8A%A0%E7%94%A8%E3%81%AEUI%E3%81%AB%E3%81%AA%E3%81%A3%E3%81%A6%E3%81%BB%E3%81%97%E3%81%84

--- a/app/views/issues/_edit.html.erb
+++ b/app/views/issues/_edit.html.erb
@@ -75,7 +75,7 @@
     <%= submit_tag l(:button_submit) %>
     <%= link_to(
           l(:button_cancel), issue_path(id: @issue.id),
-          :onclick => params[:action] == 'show' ? "$('#update').hide(); return false;" : ''
+          :onclick => params[:action] == 'show' ? "window.location.reload();" : ''
         ) %>
     <%= hidden_field_tag 'prev_issue_id', @prev_issue_id if @prev_issue_id %>
     <%= hidden_field_tag 'next_issue_id', @next_issue_id if @next_issue_id %>
