--- a/app/views/workflows/permissions.html.erb
+++ b/app/views/workflows/permissions.html.erb
@@ -34,16 +34,17 @@
     <%= @trackers.map {|tracker| hidden_field_tag 'tracker_id[]', tracker.id, :id => nil}.join.html_safe %>
     <%= @roles.map {|role| hidden_field_tag 'role_id[]', role.id, :id => nil}.join.html_safe %>
     <%= hidden_field_tag 'used_statuses_only', params[:used_statuses_only], :id => nil %>
-    <div class="autoscroll">
+    <div class="sticky-table-wrapper">
     <table class="list workflows fields_permissions">
     <thead>
-      <tr>
-        <th>
+      <tr class='fixed-row'>
+        <th class='fixed-column'>
+          <%=l(:label_issue_status)%>
         </th>
-        <th colspan="<%= @statuses.length %>"><%=l(:label_issue_status)%></th>
+        <th colspan="<%= @statuses.length %>"></th>
       </tr>
-      <tr>
-        <td></td>
+      <tr class='fixed-row status'>
+        <td class='fixed-column'></td>
         <% for status in @statuses %>
         <td style="width:<%= 75 / @statuses.size %>%;">
           <%= status.name %>
@@ -52,15 +53,16 @@
       </tr>
     </thead>
     <tbody>
-      <tr class="group open">
-        <td colspan="<%= @statuses.size + 1 %>">
-          <span class="expander icon icon-expanded" onclick="toggleRowGroup(this);">&nbsp;</span>
+      <tr class="group open fixed-row">
+        <td class='fixed-column'>
+        <span class="expander icon icon-expanded" onclick="toggleRowGroup(this);">&nbsp;</span>
           <%= l(:field_core_fields) %>
         </td>
+        <td colspan="<%= @statuses.size %>"></td>
       </tr>
       <% @fields.each do |field, name| %>
       <tr>
-        <td class="name">
+        <td class="name fixed-column">
           <%= name %> <%= content_tag('span', '*', :class => 'required') if field_required?(field) %>
         </td>
         <% for status in @statuses -%>
@@ -72,15 +74,16 @@
       </tr>
       <% end %>
       <% if @custom_fields.any? %>
-        <tr class="group open">
-          <td colspan="<%= @statuses.size + 1 %>">
-            <span class="expander icon icon-expanded" onclick="toggleRowGroup(this);">&nbsp;</span>
+        <tr class="group open fixed-row">
+          <td class='fixed-column'>
+            <span class="expander icon icon-expended" onclick="toggleRowGroup(this);">&nbsp;</span>
             <%= l(:label_custom_field_plural) %>
           </td>
+          <td colspan="<%= @statuses.size %>"></td>
         </tr>
         <% @custom_fields.each do |field| %>
         <tr>
-          <td class="name">
+          <td class="name fixed-column">
             <%= field.name %> <%= content_tag('span', '*', :class => 'required') if field_required?(field) %>
           </td>
           <% for status in @statuses -%>
