--- a/app/views/attachments/_links.html.erb
+++ b/app/views/attachments/_links.html.erb
@@ -1,23 +1,23 @@
 <div class="attachments">
 <div class="contextual">
-  <%= link_to(l(:label_edit_attachments),
+  <%= link_to(labeled_icon(l(:label_edit_attachments), 'pen-alt', icon_only: true),
               container_attachments_edit_path(container),
               :title => l(:label_edit_attachments),
-              :class => 'icon-only icon-edit'
+              :class => 'icon-only icon-edit icon-svg'
              ) if options[:editable] %>
-  <%= link_to(l(:label_download_all_attachments),
+  <%= link_to(labeled_icon(l(:label_download_all_attachments), 'download', icon_only: true),
               container_attachments_download_path(container),
               :title => l(:label_download_all_attachments),
-              :class => 'icon-only icon-download'
+              :class => 'icon-only icon-download icon-svg'
              ) if attachments.size > 1 %>
 </div>
 <table>
 <% for attachment in attachments %>
 <tr>
   <td>
-    <%= link_to_attachment attachment, class: 'icon icon-attachment' -%>
+    <%= link_to_attachment attachment, class: 'icon icon-attachment icon-svg' -%>
     <span class="size">(<%= number_to_human_size attachment.filesize %>)</span>
-    <%= link_to_attachment attachment, class: 'icon-only icon-download', title: l(:button_download), download: true -%>
+    <%= link_to_attachment attachment, class: 'icon-only icon-download icon-svg', title: l(:button_download), download: true -%>
   </td>
   <td><%= attachment.description unless attachment.description.blank? %></td>
   <td>
@@ -27,10 +27,10 @@
   </td>
   <td>
     <% if options[:deletable] %>
-      <%= link_to l(:button_delete), attachment_path(attachment),
+      <%= link_to labeled_icon(l(:button_delete), 'trash-alt', icon_only: true, size: 12), attachment_path(attachment),
                   :data => {:confirm => l(:text_are_you_sure)},
                   :method => :delete,
-                  :class => 'delete icon-only icon-del',
+                  :class => 'delete icon-only icon-del icon-svg',
                   :title => l(:button_delete) %>
     <% end %>
   </td>
