--- a/app/views/issues/index.html.erb
+++ b/app/views/issues/index.html.erb
@@ -1,6 +1,6 @@
 <div class="contextual">
   <% if User.current.allowed_to?(:add_issues, @project, :global => true) && (@project.nil? || Issue.allowed_target_trackers(@project).any?) %>
-    <%= link_to l(:label_issue_new), _new_project_issue_path(@project), :class => 'icon icon-add new-issue' %>
+    <%= link_to labeled_icon(l(:label_issue_new), 'plus-circle'), _new_project_issue_path(@project), :class => 'icon icon-svg icon-add new-issue' %>
   <% end %>
   <%= actions_dropdown do %>
     <% if @project %>
