--- a/app/views/custom_fields/formats/_timewithzone.html.erb
+++ b/app/views/custom_fields/formats/_timewithzone.html.erb
@@ -1,3 +1,4 @@
-<p><%= f.datetime_local_field(:default_value, :value => @custom_field.default_value, :size => 16) %></p>
+<p><%= f.datetime_local_field(:default_value, :value => Redmine::FieldFormat::TimewithzoneFormat.time_local(@custom_field.default_value), :size => 12) %>
+(<%= Redmine::FieldFormat::TimewithzoneFormat.timezone(@custom_field.default_value) %>)</p>
 <%= datetimepicker_for('custom_field_default_value') %>
 <p><%= f.text_field :url_pattern, :size => 50, :label => :label_link_values_to %></p>
