--- a/app/views/layouts/mailer.text.erb
+++ b/app/views/layouts/mailer.text.erb
@@ -9,5 +9,5 @@
 <% if Setting.show_recipients_in_mail_footer? && @recipients.present? %>
 
 <%= l(:text_sent_email_to_recipients) %>
-<%= @recipients.take(Setting.show_recipients_limit.to_i).map(&:name).join(', ') %><%= '...' if @recipients.size > Setting.show_recipients_limit.to_i %>
+<%= show_recipients @recipients %>
 <% end -%>
