--- a/app/views/settings/_general.html.erb
+++ b/app/views/settings/_general.html.erb
@@ -6,6 +6,8 @@
 <p><%= setting_text_area :welcome_text, :cols => 60, :rows => 5, :class => 'wiki-edit' %></p>
 <%= wikitoolbar_for 'settings_welcome_text' %>
 
+<p><%= setting_text_area :banner_text, :cols => 60, :rows => 5, :class => 'wiki-edit' %></p>
+<%= wikitoolbar_for 'settings_banner_text' %>
 
 <p><%= setting_text_field :per_page_options, :size => 20 %>
 <em class="info"><%= l(:text_comma_separated) %></em></p>
