--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1152,6 +1152,7 @@ div#banner-text {
   background-color: #eee;
   border: 1px solid #ddd;
   padding-left: 12px;
+  color: #333;
 }
 
 /***** Progress bar *****/
