--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -20,7 +20,7 @@
 </head>
 <body class="<%= body_css_classes %>">
 <%= call_hook :view_layouts_base_body_top %>
-<% if Setting.banner_text.present? %>
+<% if Setting.banner_text.present? && (!Setting.login_required? || User.current.logged?) %>
     <div id="banner-text">
         <%= textilizable Setting.banner_text %>
     </div>
