Sohw 'gems' badge on plugin list

--- a/app/views/admin/plugins.html.erb
+++ b/app/views/admin/plugins.html.erb
@@ -12,7 +12,7 @@
       <tbody>
       <% @plugins.each do |plugin| %>
           <tr id="plugin-<%= plugin.id %>">
-          <td class="name"><span class="name"><%= plugin.name %></span>
+          <td class="name"><span class="name"><%= plugin.name %><%= content_tag('span', 'GEM', :class => 'badge badge-gem') if plugin.gem? %></span>
               <%= content_tag('span', plugin.description, :class => 'description') unless plugin.description.blank? %>
               <%= content_tag('span', link_to(plugin.url, plugin.url), :class => 'url') unless plugin.url.blank? %>
           </td>
